- added x64 to vs2008 project ( buildAllExamples_v9 ) [paths: obj64, win64-visualstudio]
- burningvideo: getMaxTextureSize adjusted [ changed meaning of SOFTWARE_DRIVER_2_TEXTURE_MAXSIZE
- burningvideo: mipmaplevel adjusted ( not that bad bokeh...(sometimes) )

--------------------------
Changes in 1.8.5
 - Fix crash in eventhandling when calling remove() on a contextmenu while it has focus.
 - CImageLoaderJPG::isALoadableFileFormat uses a test which allows to load more jpg formats (for example uncompressed jpg's). Thx @Yaron Cohen-Tal for report, test-image and his help with the patch.

--------------------------
Changes in 1.8.4 (9th July 2016, svn r5321)
 - Tests on Unix now have a short pause between switching drivers to avoid certain X11 errors.
 - Fix CEnumAttribute::getInt() which could crash  (thx @ luthyr for reporting)
 - No longer try to run tests for drivers not supported on a platform
 - Update lights and renderTargetTexture tests to work with Windows 10 (can't have so tiny Windows anymore).
 - Deprecate CMatrix4::transformBox as the result is no longer a boundingbox. Use CMatrix4::transformBoxEx instead (which has been available for a long time).
 - Fix CSceneCollisionManager::getPickedNodeBB which could sometimes miss collisions.
 - Add -U__STRICT_ANSI__ option to c::b project files to allow compiling with -std=c++11 and add an error when trying to compile with Irrlicht with __STRICT_ANSI__
 - Update libpng to 1.6.23
 - Update zlib to 1.2.8
 - Fix some compile warnings in aes which got handled as errors by some c++11 compilers.
 - Get rid of some misleading-indentation warnings in gcc6
 - Fix serialization of the InputReceiverEnabled flag in CCameraSceneNode
 - Fix pasting text from X11 applications to Irrlicht. Thanks @est31 for the patch.
 - Tests give now a warning when stabilizing screenshots failed. Aslo trying more often now (a hack as taking screenshots otherwise fails often in windowed mode on some systems).

--------------------------